[package]
name = "ttlv"
version = "0.2.0"
authors = ["Velagapudi, Akhil <avelagap@visa.com>", "Spichek, Vlad <vspichek@visa.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
scroll = { version = "0.9", default-features = false }
